--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="http://pottuviljws.org">
-                        <img src="assets/images/whatsapp-image-2018-03-03-at-11.21.01-am-950x400.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
+                        <img src="assets/images/whatsapp-image-2018-03-03-at-11.21.01-am-950x400.jpg" alt="Pottuvil Janaza Welfare Society" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 
