--- a/journey.html
+++ b/journey.html
@@ -275,7 +275,7 @@
                     Address
                 </h5>
                 <p class="mbr-text">
-                    Pottuvil Grand Jummah Masjid,<br>Pottuvil. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br>PC 32500</p>
+                    Pottuvil Grand Jummah Masjid,<br>Pottuvil. <br>PC 32500</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
