--- a/index.html
+++ b/index.html
@@ -136,40 +136,40 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/whatsapp-image-2018-03-03-at-6.20.33-pm-720x1280.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/whatsapp-image-2018-03-03-at-6.20.33-pm-720x1280.jpg" alt="PottuvilJWS.org" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>தொண்டராக இணையுங்கள்</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             ஜனாஸா நிலைகளில் பல தேவைகள் காணப்படுகின்றன. அவற்றை நிவர்த்தி செய்வதற்கு உங்களின் பங்களிப்பு மிகப் பிரதானமாகும். நீங்கள் தொண்டர்களாக இணைந்து எமது இந்தப் பயணத்திற்கு துணையாக இருந்து, இதன் தொடர் இயக்கத்திற்கு தூண்டுகோலாக இருங்கள்.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="donate.html" class="btn btn-primary display-4">
-                            மேலதிக தகவலுக்கு...</a></div>
+                    <div class="mbr-section-btn text-center"><a href="volunteer.html" class="btn btn-primary display-4">
+                            தொண்டராக இணைய...</a></div>
                 </div>
             </div>
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/whatsapp-image-2018-03-03-at-6.20.25-pm1-1280x720.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/whatsapp-image-2018-03-03-at-6.20.25-pm1-1280x720.jpg" alt="PottuvilJWS.org" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>சந்தாதாரராக இணையுங்கள்</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">ஜனாஸா வாகனச் சேவையின் நிமித்தம் பல செலவீனங்கள் காணப்படுகின்றன. அவற்றை உறுப்பினர்களிடமிருந்து அறவிடப்படும் சந்தாவின் மூலம் நிவர்த்திக்க எண்ணியுள்ளோம். நீங்களும் உங்களைச் சந்தாதாரராக இணைத்து இந்தச் சேவையின் தொடர்ச்சிக்கு உதவலாம்.&nbsp;</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="donate.html" class="btn btn-primary display-4">
-                            மேலதிக தகவலுக்கு...</a></div>
+                    <div class="mbr-section-btn text-center"><a href="subscriber.html" class="btn btn-primary display-4">
+                            சந்தாதாரராக...</a></div>
                 </div>
             </div>
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/mbr-1620x1080.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/mbr-1620x1080.jpg" alt="PottuvilJWS.org" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
-                            நிதியுதவி செய்யுங்கள்</h4>
+                            <strong>நிதியுதவி செய்யுங்கள்</strong>strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             ஜனாஸா வாகனச் சேவையில் தொடர்ச்சியான சேவை வழங்குகையை உறுதிப்படுத்த, உங்கள் முடிந்தளவு நிதி உதவிகளை ஜனாஸா நலன்புரி அமைப்பிற்கு வழங்கலாம் இந்த நிதி, ஏழை மக்களுக்கு இலவசமான ஜனாஸா வாகனச் சேவையை வழங்குவதற்கான வாய்ப்பை உருவாக்கும்.</p>
                     </div>
@@ -194,7 +194,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="http://pottuviljws.org">
-                        <img src="assets/images/whatsapp-image-2018-03-03-at-11.21.01-am-950x400.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/whatsapp-image-2018-03-03-at-11.21.01-am-950x400.jpg" alt="PottuvilJWS.org" title="">
                     </a>
                 </div>
             </div>
