--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
-                            <strong>நிதியுதவி செய்யுங்கள்</strong>strong></h4>
+                            <strong>நிதியுதவி செய்யுங்கள்</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             ஜனாஸா வாகனச் சேவையில் தொடர்ச்சியான சேவை வழங்குகையை உறுதிப்படுத்த, உங்கள் முடிந்தளவு நிதி உதவிகளை ஜனாஸா நலன்புரி அமைப்பிற்கு வழங்கலாம் இந்த நிதி, ஏழை மக்களுக்கு இலவசமான ஜனாஸா வாகனச் சேவையை வழங்குவதற்கான வாய்ப்பை உருவாக்கும்.</p>
                     </div>
