--- a/volunteer.html
+++ b/volunteer.html
@@ -85,7 +85,7 @@
                     Address
                 </h5>
                 <p class="mbr-text">
-                    Pottuvil Grand Jummah Masjid,<br>Pottuvil. <br>PC 32500<br>Sri Lanka</p>
+                    Pottuvil Grand Jummah Masjid,<br>Pottuvil. <br>Sri Lanka<br>PC 32500</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
