--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/whatsapp-image-2018-03-03-at-11.21.01-am-950x400.jpg" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="பொத்துவில் ஜனாஸா நலன்புரி அமைப்பின் உத்தியோகபூர்வ இணையத்தளம்">
   <title>Pottuvil Janaza Welfare Society</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
@@ -71,8 +71,8 @@
             <div class="mbr-white col-md-10">
                 
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">كُلُّ نَفْسٍ ذَائِقَةُ الْمَوْتِ ۖ ثُمَّ إِلَيْنَا تُرْجَعُونَ</h3>
-                <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">ஒவ்வோர் ஆத்மாவும் மரணத்தைச் சுகிக்கக் கூடியதே யாகும்; பின்னர் நீங்கள் நம்மிடமே மீள்விக்கப்படுவீர்கள்.
-<br>(சூரத் அல் அன்கபூத் - 57)</p>
+                <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">ஒவ்வோர் ஆத்மாவும் மரணத்தைச் சுவைத்தே தீரும்; பின்னர் நீங்கள் நம்மிடமே மீள்விக்கப்படுவீர்கள்.
+<br>(சூறா அல் அன்கபூத் - 57)</p>
                 
             </div>
         </div>
