--- a/volunteer.html
+++ b/volunteer.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/whatsapp-image-2018-03-03-at-11.21.01-am-950x400.jpg" type="image/x-icon">
-  <meta name="description" content="Site Creator Description">
+  <meta name="description" content="தொண்டராக இணையுங்கள்.">
   <title>தொண்டர்கள்</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
