--- a/donate.html
+++ b/donate.html
@@ -125,8 +125,8 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">சிந்தனைக்கு...</h5>
-                <p class="mbr-text">ஒவ்வோர் ஆத்மாவும் மரணத்தைச் சுகிக்கக் கூடியதே யாகும்; பின்னர் நீங்கள் நம்மிடமே மீள்விக்கப்படுவீர்கள்.
-<br>(சூரத் அல் அன்கபூத் - 57)&nbsp;<br></p>
+                <p class="mbr-text">ஒவ்வோர் ஆத்மாவும் மரணத்தைச் சுவைத்தே தீரும்; பின்னர் நீங்கள் நம்மிடமே மீள்விக்கப்படுவீர்கள்.
+<br>(சூறா அல் அன்கபூத் - 57)&nbsp;<br></p>
             </div>
         </div>
         <div class="footer-lower">
