--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="container">
         <div class="inner-container" style="width: 66%;">
             <hr class="line" style="width: 25%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-5">பொத்துவிலின் வெவ்வேறு பகுதிகளுக்குப் பொறுப்பாக, பொறுப்பாளர்கள் அமைப்பால் நியமிக்கப்பட்டுள்ளார்கள்.</div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-5">பொத்துவிலின் வெவ்வேறு பகுதிகளுக்குமான பொறுப்பாளர்கள்</div>
             <hr class="line" style="width: 25%;">
         </div>
     </div>
@@ -101,21 +101,21 @@
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ul>
                     <li><strong>AM. NASURUDEEN(RAFEEK) </strong>- P/15 - 0773779664</li>
-                    <li><strong>K.AZEEZ MOULAVI </strong>- P/14- &nbsp;0774283791
+                    <li><strong>K. AZEEZ MOULAVI </strong>- P/14- &nbsp;0774283791
 </li><li><strong>AA. AZEEZ (Rt.GRAMA NILADARI)</strong> - P/14 - 0767545461
 </li><li><strong>AM. MUNSIH </strong>- P/15 - 0772228883
 </li><li><strong>MH. JAMAHIM </strong>- P/05,06 - 0772112648
-</li><li><strong>VT.SAMOON </strong>- P/05,06 - 0776013895
+</li><li><strong>VT. SAMOON </strong>- P/05,06 - 0776013895
 </li><li><strong>SAM. SUFIYAN </strong>- P/6,7,8- &nbsp;0766870593
 </li><li><strong>MSM. MALIK PHI </strong>- P/6,7,8 - 0772289845
-</li><li><strong>A.MUZAMMIL (AUTO) </strong>- P/5,18,19 - 0778302486
+</li><li><strong>A. MUZAMMIL (AUTO) </strong>- P/5,18,19 - 0778302486
 </li><li><strong>MTM. JAUFER (FI) </strong>- P/6,7,8 - 0772268298
 </li><li><strong>MSA. MAJEED </strong>- P/6,7,8 - 0777122901
 </li><li><strong>NMM. ISHAK (Rt.GS) </strong>- P/2,6,7,8 - 0777305315
-</li><li><strong>MC.ASHRAF</strong> - P/27 - 0779582034
+</li><li><strong>MC. ASHRAF</strong> - P/27 - 0779582034
 </li><li><strong>AC. THOUFEEK </strong>- P/01,02 - 0772373503
 </li><li><strong>STM. KHALITH </strong>- P/17,18 - 0779363392
-</li><li><strong>AG.MUSAMMATH </strong>- P/03,04 - 0772744122
+</li><li><strong>AG. MUSAMMATH </strong>- P/03,04 - 0772744122
 </li><li><strong>Y. MOHAITHEEN </strong>- P/20,21 - &nbsp;0754298194
 </li><li><strong>K. ALI AKBAR </strong>- P/17 - 077 3561604
 </li><li><strong>K. ABDUL MAJEED </strong>- P/26 - 0771272718</li><li><strong>MP. ABDUL SUKKOOR</strong> - P/05 - 0777454455</li>
@@ -215,8 +215,8 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">சிந்தனைக்கு...</h5>
-                <p class="mbr-text">ஒவ்வோர் ஆத்மாவும் மரணத்தைச் சுகிக்கக் கூடியதே யாகும்; பின்னர் நீங்கள் நம்மிடமே மீள்விக்கப்படுவீர்கள்.
-<br>(சூரத் அல் அன்கபூத் - 57)&nbsp;<br></p>
+                <p class="mbr-text">ஒவ்வோர் ஆத்மாவும் மரணத்தைச் சுவைத்தே தீரும்; பின்னர் நீங்கள் நம்மிடமே மீள்விக்கப்படுவீர்கள்.
+<br>(சூறா அல் அன்கபூத் - 57)&nbsp;<br></p>
             </div>
         </div>
         <div class="footer-lower">
